# ds-u2-actividad-1b-listasenlazadassimples-jfop-afk

./: README.md
Doxygen/doxygen/: _lista_general_8cpp.html  _lista_general_8cpp_source.html  _lista_general_8h.html  _lista_general_8h.js  _lista_general_8h_source.html  _lista_sensor_8h.html  _lista_sensor_8h.js  _lista_sensor_8h_source.html  _sensor_base_8cpp.html  _sensor_base_8cpp_source.html  _sensor_base_8h.html  _sensor_base_8h.js  _sensor_base_8h_source.html  _sensor_presion_8cpp.html  _sensor_presion_8cpp_source.html  _sensor_presion_8h.html  _sensor_presion_8h.js  _sensor_presion_8h_source.html  _sensor_temperatura_8cpp.html  _sensor_temperatura_8cpp_source.html  _sensor_temperatura_8h.html  _sensor_temperatura_8h.js  _sensor_temperatura_8h_source.html  _serial_reader_8cpp.html  _serial_reader_8cpp_source.html  _serial_reader_8h.html  _serial_reader_8h.js  _serial_reader_8h_source.html  annotated.html  annotated_dup.js  class_lista_general-members.html  class_lista_general.html  class_lista_general.js  class_lista_sensor-members.html  class_lista_sensor.html  class_lista_sensor.js  class_sensor_base-members.html  class_sensor_base.html  class_sensor_base.js  class_sensor_presion-members.html  (+32 more)
Doxygen/doxygen/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  (+12 more)
PracticaArduino/: CMakeLists.txt  ListaGeneral.cpp  ListaGeneral.h  ListaSensor.h  SensorBase.cpp  SensorBase.h  SensorPresion.cpp  SensorPresion.h  SensorTemperatura.cpp  SensorTemperatura.h  SerialReader.cpp  SerialReader.h  arduino_sensor.ino  main.cpp
